Don't scale down too small previews for the transform tool

BUG:374388